bleme/front-bleme/base/resources/hdr.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers
spec:
  headers:
    # contentSecurityPolicy: "default-src *; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline';"
    contentSecurityPolicy: |
      default-src *  data: blob: filesystem: about: ws: wss: 'unsafe-inline' 'unsafe-eval' 'unsafe-dynamic';
      script-src * data: blob: 'unsafe-inline' 'unsafe-eval';
      connect-src * data: blob: 'unsafe-inline';
      img-src * data: blob: 'unsafe-inline';
      frame-src * data: blob: ;
      style-src * data: blob: 'unsafe-inline';
      font-src * data: blob: 'unsafe-inline';

# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: headers
# spec:
#   headers:

#     # forceSTSHeader: true
#     # stsPreload: true
#     # contentTypeNosniff: true
#     # browserXssFilter: true
#     # stsIncludeSubdomains: true
#     # stsSeconds: 63072000
#     # frameDeny: true
#     # sslRedirect: true
#     contentSecurityPolicy: |
#       default-src *; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src * 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src *; style-src * 'unsafe-inline';
#       default-src *; style-src 'self' 'unsafe-inline'; img-src * 'self'; script-src * 'self' 'unsafe-inline' 'unsafe-eval';
#     # accessControlAllowMethods:
#     #   - "GET"
#     #   - "POST"
#     # accessControlAllowOriginList:
#     #   - "https://*.vadosware.io"
#     #   - "https://vadosware.io"
#     # accessControlMaxAge: 100
#     # addVaryHeader: true
#     # referrerPolicy: "same-origin"
