bleme/front-bleme/base/resources/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.priority: "5"
    traefik.ingress.kubernetes.io/preserve-host: "true"
    traefik.ingress.kubernetes.io/pass-tls-cert: "true"
    traefik.ingress.kubernetes.io/frontend-entry-points: https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: https
    # traefik.ingress.kubernetes.io/router.middlewares: bleme-headers
  name: ingress-front-bleme
spec:
  tls:
  - secretName: sectlsu
    hosts:
    - "*.bleme.fr"
  rules:
  - host: "*.bleme.fr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-bleme
            port:
              number: 80
